agregando mas cosas

--- a/bananazos/bananazos/templates/main/base.html
+++ b/bananazos/bananazos/templates/main/base.html
@@ -18,7 +18,7 @@
       <ul class="right hide-on-med-and-down">
         
         {% if user.is_authenticated %}
-          <li><a href="#">Historial</a></li>
+          <li><a href="historial">Historial</a></li>
           <li><a href="#">Usuarios</a></li>
           <li><a href="/logout">Salir</a></li>
         {% else %}
@@ -51,26 +51,22 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p class="grey-text text-lighten-4">Somos un equipo de estudiantes universitarios que trabajan en este proyecto como si fuera nuestro trabajo de tiempo completo. Cualquier cantidad ayudaría a apoyar y continuar el desarrollo de este proyecto y es muy apreciada.</p>
 
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Tecnologias Usadas</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://www.djangoproject.com/">Django</a></li>
+            <li><a class="white-text" href="https://materializecss.com/">Materialize</a></li>
+            <li><a class="white-text" href="https://azure.microsoft.com/es-mx/">Azure</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Ve el Proyecto Completo</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://github.com/BackpropagatedPoets/Bananazos">Github</a></li>
           </ul>
         </div>
       </div>
