--- a/bananazos/general/templates/general/index.html
+++ b/bananazos/general/templates/general/index.html
@@ -5,73 +5,24 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <a href="#" >
-                <center>
-                      <h5 class="center">Speeds up development</h5>
-                      <img  data-caption="A picture of a way with a group of trees in a park" width="250" src="https://lorempixel.com/800/400/nature/4">
-                      
-                </center>
-                <center>
-                <pre class="light">4:20 min 
-2 reproducciones</pre>
-                </center>
-                
-            </a>
-          </div>
+        {% for id, titulo, imagen, duracion, vistas in trailers %}
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <a href="{% url 'trailers:video' id %}">
+                  <center>
+                        <h5 class="center">{{titulo}}</h5>
+                        <img  data-caption="A picture of a way with a group of trees in a park" width="250" src={{imagen}}>
+                  </center>
+                  <center>
+                  <pre class="light">{{duracion}} min</pre> 
+                  <pre>{{vistas}} reproducciones</pre>
+                  </center>
+                  
+              </a>
+            </div>
         </div>  
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <a href="#" >
-                <center>
-                      <h5 class="center">Speeds up development</h5>
-                      <img  data-caption="A picture of a way with a group of trees in a park" width="250" src="https://lorempixel.com/800/400/nature/4">
-                      
-                </center>
-                <center>
-                <pre class="light">4:20 min 
-2 reproducciones</pre>
-                </center>
-                
-            </a>
-          </div>
-        </div> 
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <a href="#" >
-                <center>
-                      <h5 class="center">Speeds up development</h5>
-                      <img  data-caption="A picture of a way with a group of trees in a park" width="250" src="https://lorempixel.com/800/400/nature/4">
-                      
-                </center>
-                <center>
-                <pre class="light">4:20 min 
-2 reproducciones</pre>
-                </center>
-                
-            </a>
-          </div>
-        </div> 
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <a href="#" >
-                <center>
-                      <h5 class="center">Speeds up development</h5>
-                      <img  data-caption="A picture of a way with a group of trees in a park" width="250" src="https://lorempixel.com/800/400/nature/4">
-                      
-                </center>
-                <center>
-                <pre class="light">4:20 min 
-2 reproducciones</pre>
-                </center>
-                
-            </a>
-          </div>
-        </div>
+        {% endfor %}
+       
       </div>
     </div>
  {% endblock %}
