--- a/bananazos/general/templates/general/video.html
+++ b/bananazos/general/templates/general/video.html
@@ -7,11 +7,11 @@
       <div class="col s12 m8">
         
         <div class="icon-block">
-          <h5 class="center">Speeds up development</h5>
+          <h5 class="center">{{titulo}}</h5>
           
               <center>
                     <div class="video-container">
-                      <iframe width="853" height="480" src="//www.youtube.com/embed/Q8TXgCzxEnw?rel=0" frameborder="0" allowfullscreen></iframe>
+                      <iframe width="853" height="480" src={{link}} frameborder="0" allowfullscreen></iframe>
                     </div>
               </center>
 
@@ -19,14 +19,15 @@
               <div class="col s12 m9">
                 <ul class="collapsible">
                   <li>
-                    <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                      <div class="collapsible-header"><i class="material-icons">filter_drama</i>ver mas</div>
+                      <div class="collapsible-body"><span>{{descripcion}}</span></div>
+                    
                   </li>
                 </ul>
                 
               </div>
               <div class="col s12 m3">
-                <p>45<a href="#" ><i class="material-icons">thumb_up</i></a> 46<a href="#" ><i class="material-icons">thumb_down</i></a></p>
+                <p>{{likes}}<a href="#" ><i class="material-icons">thumb_up</i></a> {{dislikes}}<a href="#" ><i class="material-icons">thumb_down</i></a></p>
               </div>
               </center>
               
@@ -40,11 +41,11 @@
         <div class="icon-block">
           <a href="#" >
               <center>
-                    <h5 class="center">Speeds up development</h5>
-                    <img  data-caption="A picture of a way with a group of trees in a park" width="250" src="https://lorempixel.com/800/400/nature/4">
-             
-              <pre class="light">4:20 min 
-2 reproducciones</pre>
+                    <h5 class="center">{{video_recomendado_titulo}}</h5>
+                    <img  data-caption="A picture of a way with a group of trees in a park" width="250" src={{video_recomendado_miniatura}}>
+              <pre>{{video_recomendado_duracion}} min</pre>
+              <pre>{{video_recomendado_vistas}} reproducciones</pre>
+              
               </center>
               
           </a>
@@ -56,14 +57,14 @@
 
     <ul class="collection">
     
+      {% for username, comentario in comentarios %}
       <li class="collection-item avatar">
         <i class="material-icons circle">face</i>
-        <span class="Nombre Persona"><strong>Title</strong></span>
-        <p>Comentario <br>
-           Laargou8
-        </p>
+        
+        <span class="Nombre Persona"><strong>{{username}}</strong></span>
+        <p>{{comentario}}</p>
       </li>
-      
+      {% endfor %}
     </ul>
 </div>
 {% endblock %}
