Conexion a la base de datos

--- a/bananazos/bananazos/templates/main/base.html
+++ b/bananazos/bananazos/templates/main/base.html
@@ -18,9 +18,9 @@
       <ul class="right hide-on-med-and-down">
         
         {% if user.is_authenticated %}
-          <li><a href="historial">Historial</a></li>
+          <li><a href="/historial">Historial</a></li>
           <li><a href="#">Usuarios</a></li>
-          <li><a href="subir_trailer">Subir Trailer</a></li>
+          <li><a href="/subir_trailer">Subir Trailer</a></li>
           <li><a href="/logout">Salir</a></li>
         {% else %}
           <li><a href="/login">Inicia Sesion</a></li>
