--- a/bananazos/general/templates/general/historial.html
+++ b/bananazos/general/templates/general/historial.html
@@ -6,17 +6,17 @@
     <h1>Historial</h1>
     <!--   Icon Section   -->
     <div class="row">
-      {% for id, titulo, imagen, duracion, vistas in trailers %}
+      {% for trailer in trailers %}
         
           <div class="icon-block">
-            <a href="{% url 'trailers:video' id %}">
+            <a href="{% url 'trailers:video' trailer.id %}">
                 <center>
-                      <h5 class="center">{{titulo}}</h5>
-                      <img  data-caption="A picture of a way with a group of trees in a park" width="250" src={{imagen}}>
+                      <h5 class="center">{{trailer.titulo}}</h5>
+                      <img  data-caption="A picture of a way with a group of trees in a park" width="250" src={{trailer.link_imagen}}>
                 </center>
                 <center>
-                <pre class="light">{{duracion}} min</pre> 
-                <pre>{{vistas}} reproducciones</pre>
+                <pre class="light">{{trailer.duracion}} min</pre> 
+                <pre>{{trailer.vistas}} reproducciones</pre>
                 </center>
                 
             </a>
