--- a/bananazos/general/templates/general/lista_usuarios.html
+++ b/bananazos/general/templates/general/lista_usuarios.html
@@ -5,7 +5,7 @@
 <div class="section">
     <h1>Lista de Usuarios</h1>
     {% for username, nombre, correo in usuarios %}
-        <a href="{% url 'general:usuario' username}">
+        <a href="{% url 'trailers:usuario' username}">
             <h3>{{nombre}}</h3>  
             <h5>{{username}}: {{correo}}</h5>
         </a>
